Version 4.1.1-beta2

Switched the lyric helper and plugins to now use my new LyricFinder CPAN 
module instead of the much-older Lyrics::Fetcher::* modules maintained by 
David Precious.  This makes installation much easier as all the supported 
side modules are now bundled together!  We also added some new features, and 
we now have full contol over updates / maintenance!

Version 4.1.1-beta1

I now believe that v4.1-final was slightly rushed (should've released a 
4.1-beta4 in hindsight), as (is typical) when the dust settled, I thought 
of a cpl. (minor, I thought) features to add for the next release that ended 
up resulting in a bunch of testing and revealed (or created) issues (bugs) 
that needed fixing!  Therefore, with Audacious development seeming to be 
in hibernation at the moment, I want to get all this out into an eventual 
v4.1.1-final eventually (before Audacious wakes back up), then maybe pause 
myself for a while.  We're also waiting on the Lyrics::Fetcher developer to 
merge our changes into his code.  Anyway, go apply those commits and test! ;)

FIXED:

* Minor issue with Albumart's "Hide info bar art icon unless separate 
album cover fetched" option that caused non-"dup" (internet-fetched) 
album-art to still show in info bar when [View].[Show Info Bar Album Art] 
was unchecked (hide always).

* Url Helper script:  Handle non-ascii characters that come from a few 
websites vis StreamFinder in the description text, and possibly the title, 
that don't play nice with Glib's g_key_file_get_string () function, which is 
used to fetch this data from the tag files.

* CDs/DVDs: (LyricWiki) - Make LyricWiki plugin's [Save Locally] button 
work correctly for disks when the [Try to save by song file-name first] 
option is set.

* CDs/DVDs: Fix some issues involving updating & saving tag metadata via 
the [Song Info] screen, and harden the code to prevent potential crashes 
if the disk has no disk-ID / title.  For CDs, track metadata can be fetched 