@@ -1,8 +1,9 @@
 #USER: EDIT THIS FILE TO:
-#ADD STREAMING STATIONS THAT SWITCH BACK TO THEIR STATION TITLE NEAR END OF 
-#SONG BEFORE SWITCHING TO #NEXT SONG IN ORDER TO AVOID RE-SEARCHING THE 
+#ADD STREAMING STATIONS THAT SWITCH BACK TO THEIR STATION TITLE NEAR END OF
+#SONG BEFORE SWITCHING TO NEXT SONG IN ORDER TO AVOID RE-SEARCHING THE
 #LYRICS SITES FOR LIKELY NON-EXISTANT "TITLE" EVERY SONG!
-#FORMAT:  artist name|title name (one pair per line):
+#FORMAT1:  'artist name|title name' (one pair per line):
+#FORMAT2:  'album name' (one per line):
 
 
 #YOU CAN ALSO ADD A USER-AGENT LINE TO SEND TO THE LYRICS SITES HERE:
