@@ -44,7 +44,7 @@
   <li><a href="#34">34)  I like Audacious's Lyricwiki plugin for displaying song lyrics, but I have mp3 files with the lyrics already embedded in the Id3 tags, but Lyricwiki ignores them and still has to fetch them from the web.</a></li>
   <li><a href="#35">35)  I need the Equalizer window to stay up after I exit and restart Audacious / Fauxdacious, but it doesn't, as I use the non-skinned interfaces.  Instead, I have to pop it back up manually.  Audacious has been asked to fix this, but hasn't yet, can you?</a></li>
   <li><a href="#36">36)  What are these "helper scripts" you keep referencing?</a></li>
-  <li><a href="#37">37)  Audacious's Lyrics plugins have stopped working due to the lyricwiki site going defunct, can you do anything to fix this?</a></li>
+  <li><a href="#37">37)  Audacious's Lyrics plugins have become somewhat hobbled due to the lyricwiki site going defunct, can you do anything to fix this?</a></li>
 </ul>
 </span></td>
 </tr>
@@ -524,17 +524,17 @@ NOTE:  This will be ignored if the "-o/--out=&lt;ext&gt;" option is also specifi
 <td align="justify" valign="top" width="100%"><span style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;">User-editable configuration text file:&nbsp;  FauxdaciousCoverArtHelper.ini (see comments inside file).  The albumart plugins will attempt to fetch an album-cover image from the internet every time the song title (metadata) changes (to a new song)unless a cover art image for the song are already cached locally.  Most streaming stations only change the metadata when a song changes, but some will change (reset) the metadata to the station's own metadata near the end of a song, or during commercials (to advertise the station itself, I guess), then change to the next song title later when a new song begins to play.  Fauxdacious will display the STATION'S icon and metatata (album and title) briefly between songs in these cases.  The side effect is that the cover-art helper script will end up re-"hitting" the internet for (the usually non-existant) album-art image for that station between EVERY song streamed, which is very wasteful and bad netiquette!  For such stations that present this behaviour that the user listens to regularly, simply add the station's default "album" and "title" fields separated by a "|" to FauxdaciousCoverArtHelper.ini, so that it will be skipped and no internet search will be made.  An example station known to do this is called "IHeart '80s" (https://www.iheart.com/live/iheart80s-radio-5060/) with the station's default metadata:  "IEIG-FL ZC Backup|My80s" (Probably all "IHeart-sponsored commercial-free streams" are similar).  It's not necessary to do this, but can make album-art fetching more efficient and reduce overusage of MusicBrainz.com (and help save the internet)!  To add such stations to this list, edit the (text editable) FauxdaciousCoverArtHelper.ini file in contrib/ and copy it to ~/.config/fauxdacious[-instancename]/.  For Windows users, the file is in fauxdacious/bin/, copy it to C:\Users\&lt;User-ID&gt;\AppData\Local\fauxdacious[-instancename]\</span></td>
 </tr>
 <tr>
-<td align="justify" valign="top" width="100%"><span style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;">FauxdaciousLyricsHelper.pl:  This script enables Fauxdacious to fetch lyrics from a variety of lyrics websites (for the lyricwiki plugins).  This was added in October, 2020 when it was found that the lyricwiki site "lyrics.fandom.com" stopped supporting lyric queries used by Audacious / Fauxdacious, and it appeared that Audacious may not want to find another site and fix it.  I decided to create a Perl helper using a CPAN module by David Precious called <a style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;color:#B0B0B0;text-decoration:underline;" href="https://metacpan.org/pod/Lyrics::Fetcher" target="altwindow" rel="nofollow">Lyrics::Fetcher</a>, which uses site-specific submodules to fetch lyrics from different sites.  Fauxdacious uses these modules through FauxdaciousLyricsHelper.pl to randomly search the various installed / supported sites for lyrics.  NOTE:  The user must specify this helper under [Settings].[Avanced] (see bottom of window).  Non-Windows users must also install / update Lyrics::Fetcher, and at least one of the Lyrics::Fetcher::* site-specific submodules (currently must be installed separately).  I recommend Lyrics::Fetcher::Genius, if you only wish to install one.  If lyrics.fandom.com is reactivated or Audacious finds a new site and updates their lyricwiki plugins, then the Fauxdacious lyricwiki plugins will then also work without this helper script specified!  NOTE:  Windows users using the pre-installed pre-compiled binary versions of the helper scripts only need to add the helper binaries (.exe) to the three helper fields under [Settings].[Advanced]!</span></td>
+<td align="justify" valign="top" width="100%"><span style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;">FauxdaciousLyricsHelper.pl:  This script enables Fauxdacious to fetch lyrics from a variety of lyrics websites (for the lyricwiki plugins).  This was added in October, 2020 when it was found that the lyricwiki site "lyrics.fandom.com" stopped supporting lyric queries used by Audacious / Fauxdacious, and it appeared that Audacious may not want to find another site and fix it.  I decided to create a Perl helper using a new CPAN module called <a style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;color:#B0B0B0;text-decoration:underline;" href="https://metacpan.org/pod/LyricsFinder" target="altwindow" rel="nofollow">LyricsFinder</a>, which uses site-specific submodules (included) to fetch lyrics from different sites.  Fauxdacious uses these modules through FauxdaciousLyricsHelper.pl to randomly search the various installed / supported sites for lyrics.  NOTE:  The user must specify this helper under [Settings].[Avanced] (see bottom of window).  Non-Windows users must also install / update LyricsFinder from CPAN.  If lyrics.fandom.com is ever reactivated or Audacious finds a new site and updates their lyricwiki plugins, then the Fauxdacious lyricwiki plugins will then also work without this helper script specified!  NOTE:  Windows users using the pre-installed pre-compiled binary versions of the helper scripts only need to add the helper binaries (.exe) to the three helper fields under [Settings].[Advanced]!</span></td>
 </tr>
 <tr>
 <td align="justify" valign="top" width="100%"><span style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;">User-editable configuration text file:&nbsp;  FauxdaciousLyricsHelper.ini (see comments inside file).  The lyrics plugins will attempt to fetch lyrics from the internet every time the song title (metadata) changes (to a new song) unless lyrics for the song are already cached locally.  Most streaming stations only change the metadata when a song changes, but some will change (reset) the metadata to the station's own metadata near the end of a song, or during commercials (to advertise the station itself, I guess), then change to the next song title later when a new song begins to play.  Fauxdacious will display the STATION'S icon and metatata (album and title) briefly between songs in these cases.  The side effect is that the lyrics helper script will end up re-"hitting" the internet for (the usually non-existant) lyrics for that station between EVERY song streamed, which is very wasteful and bad netiquette!  For such stations that present this behaviour that the user listens to regularly, simply add the station's default "album" and "title" fields separated by a "|" to FauxdaciousCoverArtHelper.ini, so that it will be skipped and no internet search will be made.  An example station known to do this is called "IHeart '80s" (https://www.iheart.com/live/iheart80s-radio-5060/) with the station's default metadata:  "IEIG-FL ZC Backup|My80s" (Probably all "IHeart-sponsored commercial-free streams" are similar).  It's not necessary to do this, but can make lyric fetching more efficient (and help save the internet)!  To add such stations to this list, edit the (text editable) FauxdaciousLyricsHelper.ini file in contrib/ and copy it to ~/.config/fauxdacious[-instancename]/.   For Windows users, the file is in fauxdacious/bin/, copy it to C:\Users\&lt;User-ID&gt;\AppData\Local\fauxdacious[-instancename]\.  You can also change your "user-agent" string sent to the lyrics sites (if needed, see the comments in the .ini file - the default is currently: "Mozilla/5.0 (X11; Linux x86_64; rv:80.0) Gecko/20100101 Firefox/80.0")</span></td>
 </tr>
 <tr>
 <tr>
-<td align="left" valign="top" width="100%"><span id="37" style="font-family:Arial, Helvetica, sans-serif;font-size:19px;font-weight:bold;">37)  Audacious's Lyrics plugins have stopped working due to the lyricwiki site going defunct, can you do anything to fix this?</span></td>
+<td align="left" valign="top" width="100%"><span id="37" style="font-family:Arial, Helvetica, sans-serif;font-size:19px;font-weight:bold;">37)  Audacious's Lyrics plugins have become somewhat hobbled due to the lyricwiki site going defunct, can you do anything to fix this?</span></td>
 </tr>
 <tr>
-<td align="justify" valign="top" width="100%"><span style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;">Yes, this is fixed in v4.1-beta3!  I've added a new "helper" script (FauxdaciousLyricsHelper.pl), which you can copy from the contrib directory to your path, ie. /usr/local/bin/, then add under the new field in ([Settings].[Advanced]) at the bottom of the screen!  We now use Perl modules (Lyrics::Fetcher and friends) to fetch lyrics from several sites (3 currently).  NOTE:  (non-Windows users) You'll need to install Lyrics::Fetcher, and at least Lyrics::Fetcher::Genus, and optionally Lyrics::Fetcher::Musixmatch and Lyrics::Fetcher::AZLyrics from CPAN to help (used by) the "helper"!  This should be a longer-term solution, as users should no longer have to update Fauxdacious every time a lyric site changes or disappears!  NOTE:  This is currently somewhat hit-or-miss as the current Lyrics Fetcher versions are somewhat dated, but I'm working closely with the author, to iron out these minor issues and update them (and add some other sites).
+<td align="justify" valign="top" width="100%"><span style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;">Yes, this is fixed in v4.1-beta3!  I've added a new "helper" script (FauxdaciousLyricsHelper.pl), which you can copy from the contrib directory to your path, ie. /usr/local/bin/, then add under the new field in ([Settings].[Advanced]) at the bottom of the screen!  We now use the Perl CPAN module (LyricsFinder) to fetch lyrics from several sites (4 currently).  NOTE:  (non-Windows users) You'll need to install <a style="font-family:Times New Roman, Times, FreeSerif, serif;font-size:19px;font-weight:normal;color:#B0B0B0;text-decoration:underline;" href="https://metacpan.org/pod/LyricFinder" target="altwindow" rel="nofollow">LyricsFinder</a> from CPAN!  This should be a longer-term solution, as users should no longer have to update Fauxdacious every time a lyric site changes or disappears!
 </span></td>
 </tr>
 </tbody>
